<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".Registration_Activity.donor_reg"
        tools:ignore="ExtraText"
    android:background="@drawable/main_background"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="127dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/dologo"/>
            <EditText
                android:id="@+id/student_Name"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/Name"/>
            <Spinner
                android:id="@+id/spinner_group"
                android:background="@drawable/button_shape"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_import_contacts_black_24dp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/villager_adhaar"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:background="@drawable/button_shape"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:hint="@string/Adhaar_no"/>


            <EditText
                android:id="@+id/student_father"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/father_name"/>

            <EditText
                android:id="@+id/villager_password"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pass"/>

            <EditText
                android:id="@+id/villager_cnf_password"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/cnf_pass"/>
            <EditText
                android:id="@+id/villager_mobile"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/Mobile"/>

            <EditText
                android:id="@+id/villager_village"
                android:layout_width="350dp"
                android:background="@drawable/button_shape"
                android:layout_height="55dp"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_my_location_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/address"/>
            <EditText
                android:id="@+id/villager_state"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/ic_my_location_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/states"/>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="350dp"
                android:paddingLeft="20dp"
                android:layout_height="40dp"
                android:textSize="16dp"
                android:background="@drawable/testbutton"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Reg"/>

        </LinearLayout>
    </ScrollView>