<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".Login_Activity.donor_login"
        tools:ignore="ExtraText"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/main_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:gravity="center_horizontal">

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="127dp"-->
<!--                android:layout_marginTop="30dp"-->
<!--                app:srcCompat="@drawable/dologo"/>-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="दाता पोर्टल "
                android:textSize="50sp"
                android:gravity="center"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/edittext_adhaar"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:paddingRight="10dp"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:background="@drawable/button_shape"
                android:layout_marginTop="40dp"
                android:paddingLeft="10dp"
                android:hint="@string/e_mail"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="10dp"
                android:inputType="textWebPassword"
                android:paddingRight="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pass"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/button_login"
                android:layout_width="350dp"

                android:paddingLeft="10dp"
                android:layout_height="50dp"
                android:textSize="16dp"
                android:background="@drawable/button_col"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:text="@string/Log"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#17AEEE"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/OR"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_register"
                android:layout_width="350dp"
                android:paddingLeft="10dp"
                android:layout_height="50dp"
                android:textSize="17dp"
                android:background="@drawable/testbutton"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/Reg"/>

        </LinearLayout>
    </ScrollView>