<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".donor_selcet"
        tools:ignore="ExtraText"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/main_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="127dp"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#141314"
                    android:textSize="30dp"
                    android:text="@string/cat_donor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp">
                <Button
                    android:id="@+id/button_health"
                    android:layout_width="300dp"

                    android:paddingLeft="10dp"
                    android:layout_height="130dp"
                    android:textSize="40dp"
                    android:background="@drawable/bg1"
                    android:layout_marginTop="25dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/Medicine"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="50dp">
                <Button
                    android:id="@+id/button_blood"
                    android:layout_width="300dp"
                    android:paddingLeft="10dp"
                    android:layout_height="130dp"
                    android:textSize="40dp"
                    android:background="@drawable/bg1"
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/blood"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>